[MacViews] Show combobox menu popup at mouse press.

Create a PlatformStyle variable for the combobox button's NotifyAction
value. The variable is set to NOTIFY_ON_PRESS on Mac, and
NOTIFY_ON_RELEASE for other platforms. Placed TransparentButton's
OnMousePressed() override behind #if defined guards for Mac.

BUG=602912

Review-Url: https://codereview.chromium.org/2070623003
Cr-Commit-Position: refs/heads/master@{#404012}

Former-commit-id: a7b6e52dc0b0259c67dac9ded5c385739d36c7fc