ui/views/controls/combobox/combobox.cc
@@ -110,13 +110,18 @@ class TransparentButton : public CustomButton {
       : CustomButton(listener) {
     SetAnimationDuration(LabelButton::kHoverAnimationDurationMs);
     SetFocusBehavior(FocusBehavior::NEVER);
+    set_notify_action(PlatformStyle::kMenuNotifyActivationAction);
   }
   ~TransparentButton() override {}
 
+#if !defined(OS_MACOSX)
+  // Override OnMousePressed() to transfer focus to the parent() on a click
+  // except on Mac, which doesn't transfer focus when buttons are clicked.
   bool OnMousePressed(const ui::MouseEvent& mouse_event) override {
     parent()->RequestFocus();
     return true;
   }
+#endif
 
   double GetAnimationValue() const {
     return hover_animation().GetCurrentValue();
